<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation ="vertical"
    tools:context=".view.password.PasswordInputActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:id="@+id/rl_input_password">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp">
            <TextView
                android:id="@+id/tv_input_password1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_input_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_input_password3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_input_password4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <GridView
            android:id="@+id/gv_password_input_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:cacheColorHint ="@color/white"
            android:horizontalSpacing ="2dp"
            android:verticalSpacing ="2dp"
            android:listSelector="@android:color/transparent"
            android:numColumns="3"
            android:scrollbars="none"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_input_error1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_error_title"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_input_error_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/password_error_tip1"
                android:textColor="@color/gray_ff595c5c"
                android:textSize="14sp" />
        </LinearLayout>
        <Button
            android:id="@+id/bt_input_try"
            style="@style/button_normal_style"
            android:text="@string/password_error_try_again" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_input_error2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/password_error_tip3"
                android:textColor="@color/gray_ff595c5c"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@mipmap/alipay_cry" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_input_exit"
            style="@style/button_normal_style"
            android:text="@string/pay_unbinding" />

    </RelativeLayout>

</RelativeLayout>
