<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.password.PasswordSetActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:id="@+id/rl_show_password">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp">
            <TextView
                android:id="@+id/tv_set_password1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_set_password2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_set_password3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tv_set_password4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:background="@mipmap/alipay_input_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>

        </LinearLayout>

        <GridView
            android:id="@+id/gv_password_set_keyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:cacheColorHint ="@color/white"
            android:horizontalSpacing ="2dp"
            android:verticalSpacing ="2dp"
            android:listSelector="@android:color/transparent"
            android:numColumns="3"
            android:scrollbars="none"
           />

    </RelativeLayout>
<!--确认密码提示-->
    <RelativeLayout
        android:id="@+id/rl_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_confirm_tip1"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_confirm_tip2"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_confirm_agree"
            style="@style/button_normal_style"
            android:layout_centerHorizontal="true"
            android:text="@string/password_confirm_button" />

    </RelativeLayout>

</RelativeLayout>
